<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_general">

        <Preference
            app:key="pref_ignore_battery_optimizations"
            app:title="@string/pref_battery_optimization_title"
            app:summary="@string/pref_battery_usage_summary"/>

        <SwitchPreferenceCompat
            app:key="pref_retry_on_fail"
            app:title="@string/pref_retry_on_fail_title"
            app:summary="@string/pref_retry_on_fail_summary"
            app:defaultValue="true" />
        <EditTextPreference
            app:key="pref_max_retry_attempts"
            app:title="@string/pref_max_retry_attempts_title"
            app:defaultValue="5"
            android:inputType="number"
            app:dependency="pref_retry_on_fail"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="pref_view_logs"
            app:title="@string/pref_view_logs_title"
            app:summary="@string/pref_view_logs_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_appearance">
        <SwitchPreferenceCompat
            app:key="pref_monet_theme"
            app:title="@string/pref_monet_theme_title"
            app:summary="@string/pref_monet_theme_summary"
            app:defaultValue="true" />
        <ListPreference
            app:key="pref_language"
            app:title="@string/pref_language_title"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_entry_values"
            app:defaultValue="system"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="pref_time_format"
            app:title="@string/pref_time_format_title"
            app:entries="@array/time_format_entries"
            app:entryValues="@array/time_format_entry_values"
            app:defaultValue="system"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_data_management">
        <EditTextPreference
            app:key="pref_sms_limit"
            app:title="@string/pref_sms_limit_title"
            app:defaultValue="-1"
            app:dialogTitle="@string/pref_sms_limit_dialog_title"
            android:inputType="numberSigned" />
        <Preference
            app:key="pref_clear_sms"
            app:title="@string/pref_clear_sms_title"
            app:summary="@string/pref_clear_sms_summary" />
        <Preference
            app:key="pref_export_data"
            app:title="@string/pref_export_data_title"
            app:summary="@string/pref_export_data_summary" />
        <Preference
            app:key="pref_import_data"
            app:title="@string/pref_import_data_title"
            app:summary="@string/pref_import_data_summary" />
    </PreferenceCategory>

</PreferenceScreen>
